--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,8 +1,9 @@
 <h1>Sign Up Below:</h1>
-<form action="/registrations" method="post">
-  <p>Name: <input type="text" name="name"></p>
-  <p>Email: <input type="text" name="name"></p>
-  <p>Password: <input type="text" name="name"></p>
-  <input type="submit" value="submit">
+
+<form method="POST" action="/registrations">
+    Name: <input type="text" name="name" placeholder="Jon Doe">
+    Email: <input type="text" name="email" placeholder="jon@example.com">
+    Password: <input type="password" name="password">
+    <input type="submit" value="Sign Up">
 </form>
 
